Version 3.4.x (2011-10-xx)
	Fixed bug in IE where editor in a frame doesn't give focus to the toolbar using ALT-F10.
	Fix for webkit and gecko so that deleting bullet from start of list outdents inner list items and moves first item into paragraph.
	Fix new list items in IE8 not displayed on a new line when list contains nested list items.
	Clear formatting in table cell breaks the cell.
	Made media type list localisable.
	Fix out of memory error when using prototype in media dialog.
	Fixed bug where could not add a space in the middle of a th cell.
	Fixed bug where adding a bullet between two existing bullets adds an extra one
	Fixed bug where trying to insert a new entry midway through a bulleted list fails dismally when the next entry is tabbed in.
	Fixed bug where pressing enter on an empty list item does not outdent properly in FF
	Fixed bug where adding a heading after a list item in a table cell changes all styles in that cell
	Fixed bug where hitting enter to exit from a bullet list moves cursor to the top of the page in Firefox.
	Fixed bug where pressing backspace would not delete HRs in Firefox and IE when next to an empty paragraph.
	Fixed bug where deleting part of the link text can cause a link with no destination to be saved.
	Fixed bug where css style border widths wasn't handled correctly in table dialog.
	Fixed bug where parsing invalid html contents on IE or WebKit could produce an infinite loop.
	Fixed bug where scripts with custom script types wasn't properly passed though the editor.
	Fixed issue where some Japanese kanji characters wasn't properly entity encoded when numeric entity mode was enabled.
	Made emoticons dialog use the keyboard naviation.
	Added navigation instructions to the symbols dialog.
	Added ability to set default values for the media plugin.
	Added new font_size_legacy_values option for converting old font element sizes to span with font-size properties.
	Fixed bug where the symbols dialog was not accessible.