@@ -1,4 +1,5 @@
 Version 3.4.x (2011-10-xx)
+	Fixed bug in IE where Inserting a table in IE8 places cursor in the second cell of the first row.
 	Fixed bug in IE where editor in a frame doesn't give focus to the toolbar using ALT-F10.
 	Fix for webkit and gecko so that deleting bullet from start of list outdents inner list items and moves first item into paragraph.
 	Fix new list items in IE8 not displayed on a new line when list contains nested list items.
